styles.css
body {
  background-color: rgb(66, 66, 66);
  color: white;
}

nav {
  background-color: black;
  border-bottom: 3px solid yellow;
}

select {
  margin-left: 35px;
}

/* BG Images on Desktop */
#marvelComics1000 {
  position: absolute;
  top: 18px;
  left: -80px;
  filter: blur(5px);
  z-index: -1;
}

#xmenCover {
  position: absolute;
  top: 130px;
  right: -10px;
  filter: blur(5px);
  z-index: -1;
}

#supermanComic {
  position: absolute;
  top: 760px;
  left: 316px;
  filter: blur(5px);
  z-index: -1;
}

#oldAvengers {
  position: absolute;
  top: 1293px;
  right: 458px;
  filter: blur(5px);
  z-index: -1;
}

#AdamStrange {
  position: absolute;
  top: 10px;
  left: 750px;
  filter: blur(5px);
  z-index: -1;
  height: 1500px;
}

#BatGirl {
  position: absolute;
  top: 1125px;
  left: -60px;
  filter: blur(5px);
  z-index: -4;
  height: 1000px;
}

#sheHulk {
  position: absolute;
  top: 1401px;
  left: 2084px;
  filter: blur(5px);
  z-index: -4;
  height: 740px;
}

#manhattanContainer {
  position: absolute;
  width: 694.85px;
  height: 700px;
  top: 1401px;
  left: 853px;
  overflow: hidden;
}

#manhattan {
  position: absolute;
  filter: blur(5px);
  z-index: -4;
  height: 1069px;
}
#harleyQuinn {
  position: absolute;
  top: 1611px;
  left: 554px;
  filter: blur(5px);
  z-index: -4;
  height: 500px;
}

h1 {
  font-family: "Nabla", sans-serif;
  text-align: center;
  font-size: 80px;
  margin: 0;
}
h3 {
  font-size: 40px;
  font-family: "Sarabun", sans-serif;
}

h4 {
  font-size: 20px;
  font-family: "Sarabun", sans-serif;
}

/* Grid for desktop dimensions */

.grid {
  display: grid;
  grid-template-columns: auto 35% 35%;
  grid-template-rows: 8% auto 6%;
  grid-template-areas:
    "nav nav nav"
    "section main pictureDiv"
    "footer footer footer";
}

nav {
  grid-area: nav;
}

section {
  grid-area: section;
}

main {
  grid-area: main;

  background-color: rgba(0, 0, 0, 0.85);
  padding: 10px;
  padding-right: 20px;
}

div#hero-pic {
  grid-area: pictureDiv;
}

div#hero-pic-h3 {
  grid-area: pictureDiv;
  display: none;
}

footer {
  grid-area: footer;
  font-family: "Sarabun", sans-serif;
  background-color: black;
  border-top: 3px solid yellow;
  margin-bottom: 0;
}

.hero-pic {
  height: 350px;
  margin-top: 30px;
  margin-left: 30px;
  border: 10px solid black;
}

footer {
  font-size: 50px;
  text-align: center;
}

#herosDropDown {
  height: 40px;
  width: 90%;
  text-align-last: center;
  font-size: 20px;
  margin-top: 30px;
}

/* Progress Bars on Desktop Dimensions */

option {
  text-align-last: center;
}

.bar {
  padding: 2px;
  height: 30px;
  width: 100%;
  border: 3px solid black;

  background-color: rgb(0, 0, 0);
}

#intelligenceProgress {
  background-color: green;
  height: 100%;
  box-shadow: 0px 0px 40px 2px rgba(0, 128, 0, 0.6);
}

#strengthProgress {
  background-color: rgb(128, 0, 32);
  height: 100%;
  box-shadow: 0px 0px 40px 2px rgba(128, 0, 32, 0.6);
}

#speedProgress {
  background-color: yellow;
  height: 100%;
  box-shadow: 0px 0px 10px 2px rgba(255, 255, 0, 0.6);
}

#durabilityProgress {
  background-color: lightgreen;
  height: 100%;
  box-shadow: 0px 0px 10px 2px rgba(144, 238, 144, 0.6);
}

#powerProgress {
  background-color: red;
  height: 100%;
  box-shadow: 0px 0px 10px 2px rgba(255, 0, 0, 0.6);
}

#combatProgress {
  background-color: blue;
  height: 100%;
  box-shadow: 0px 0px 10px 2px rgba(0, 0, 255, 0.6);
}

/* Tablet Dimension
@media (max-width: 1280px) {
  .grid {
    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: 6% 10% auto 10%;
    grid-template-areas:
      "nav nav"
      "section main"
      "pictureDiv main"
      "footer footer";
  }

  h1 {
    font-size: 70px;
  }

  nav {
    grid-area: nav;
  }

  section {
    grid-area: section;
  }

  select {
    margin: 0 0 0 10px;
    width: 50%;
  }

  main {
    grid-area: main;
    background-color: black;
  }

  div#hero-pic {
    grid-area: pictureDiv;
  }

  footer {
    grid-area: footer;
    font-size: 20px;
    padding: 10px;
  }
} */

/* Galaxy S20 Ultra */
@media (max-width: 412px) {
  .grid {
    display: flex;
    flex-direction: column;
  }

  select {
    margin-left: 19px;
  }

  h1 {
    font-size: 50px;
  }

  div#hero-pic-h3 {
    display: inline;
  }

  img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    height: 500px;
  }
  .nameLabel {
    display: none;
  }

  #h3Name {
    text-align: center;
  }
  div#hero-pic {
    display: none;
  }

  .bar {
    height: 20px;
    border: 1px solid black;
  }

  main {
    margin: 5px;
    background-color: transparent;
  }

  #backgroundPhotos {
    display: none;
  }

  footer {
    font-size: 20px;
    padding: 10px;
  }
}

/* iPhone 12 Pro */
@media (max-width: 390px) {
  img {
    height: 450px;
  }
}

